--- a/css/style.css
+++ b/css/style.css
@@ -618,10 +618,6 @@ input[type=checkbox] {
     margin-top: calc(-41px - 73.5px);
   }
 
-  .items.show .flex {
-    background: #333;
-  }
-
   .items.show div#itemfiles,
 .items.show .lSSlideOuter {
     width: 75%;
@@ -712,11 +708,6 @@ input[type=checkbox] {
     font-weight: 900;
     font-size: 18px;
     vertical-align: top;
-  }
-
-  .items.show .item-metadata {
-    background: #fff;
-    width: 100%;
   }
 
   .items.show.gallery .item-metadata {
@@ -910,10 +901,6 @@ input[type=checkbox] {
 
   #sort-links-list li {
     margin-right: 21px;
-  }
-
-  #sort-links-list li a {
-    opacity: 0.6;
   }
 
   #sort-links-list li a:before {
